--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,13 @@
               <a class="nav-link" href="{{ path('property.index')}}">Acheter</a>
             </li>
           </ul>
+          {% if app.user %}
+            <ul class="navbar-nav">
+              <li class="item">
+                <a href="{{path('logout')}}" class="nav-link">Se déconnecter</a>
+              </li>
+            </ul>
+          {% endif %}
         </div>
       </nav>
         {% block body %}{% endblock %}
